# kvhqc

./: .cvsignore  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  diana.setup  hqc_stations  mergestat.cpp  paramorder  slimits  sorttime.xpm  typeids
FailInfo/: CMakeLists.txt  Makefile
FailInfo/src/: FailDialog.cc  FailDialog.h  FailList.cc  FailList.h  cFailedParam.cc  cFailedParam.h  cfailedwidget.h  cfailedwidget.ui  cfailedwidget.ui.h  explainQC.cc  explainQC.h  main.cc  make.mk  ocfp.cc  ocfp.h  oldFailList.h
WatchRR/: CMakeLists.txt  Makefile
WatchRR/src/: ControlFlagCell.cc  ControlFlagCell.h  DayObs.cc  DayObs.h  FDCheckTableItem.cc  FDCheckTableItem.h  MultiStationSelection.cc  MultiStationSelection.h  OkCheckTableItem.cc  OkCheckTableItem.h  RRCheckTableItem.cc  RRCheckTableItem.h  RRDialog.cc  RRDialog.h  RRTable.cc  RRTable.h  RRTableItem.cc  RRTableItem.h  RRTableToolTip.cc  RRTableToolTip.h  RR_24DataTableItem.cc  RR_24DataTableItem.h  SADataTableItem.cc  SADataTableItem.h  SDDataTableItem.cc  SDDataTableItem.h  StationSelection.cc  StationSelection.h  VxKvDataTableItem.cc  VxKvDataTableItem.h  cellvalueprovider.cc  cellvalueprovider.h  dataconsistencyverifier.cc  dataconsistencyverifier.h  enums.h  kvdataprovider.h  main.cc  make.mk  selfexplainable.h
WatchRR/test/: test.cc
WatchRR/var/: VxExplanations.txt  fd2GenDescr.txt
WatchRR2/: AcceptReject.cc  AcceptReject.hh  AcceptRejectButtons.cc  AcceptRejectButtons.hh  AnalyseFCC.cc  AnalyseFCC.hh  AnalyseRR24.cc  AnalyseRR24.hh  CMakeLists.txt  Code2Text.cc  Code2Text.hh  ColumnFactory.cc  ColumnFactory.hh  DataCodeItem.cc  DataColumn.cc  DataColumn.hh  DataControlinfoItem.cc  DataControlinfoItem.hh  DataCorrectedItem.cc  DataCorrectedItem.hh  DataItem.cc  DataItem.hh  DataOriginalItem.cc  DataOriginalItem.hh  DataRR24Item.cc  DataRR24Item.hh  DataValueItem.cc  DataValueItem.hh  DataVxItem.cc  DataVxItem.hh  DianaHelper.cc  DianaHelper.hh  EditAccess.cc  EditAccess.hh  EditData.cc  EditData.hh  EditDataEditor.cc  EditDataEditor.hh  EditDialog.cc  EditDialog.hh  (+84 more)
WatchRR2/test/: AnalyseFCCTest.cc  AnalyseRR24Test.cc  CMakeLists.txt  CountDataChanged.cc  DataAccessTest.cc  EditAccessTest.cc  EditTimeColumnTest.cc  FakeDataAccess.cc  FakeDataAccess.hh  FakeDataAccessTest.cc  FakeKvApp.cc  FakeKvApp.hh  FakeModelAccess.cc  FakeReinserter.cc  FakeReinserter.hh  HelpersTest.cc  KvalobsAccessTest.cc  TestHelpers.cc  TestHelpers.hh  VersionedValueTest.cc  VxColumnTest.cc  data_1650_20130130.txt  data_18210_20130410.txt  gtestMain.cc  load_1650_20130130.cc  load_18210_20130410.cc  load_31850_20121130.cc  load_32780_20121207.cc  load_44160_20121207.cc  load_52640_20121231.cc  load_54420_20121130.cc  load_84070_20120930.cc  load_examples_201303.cc  model_examples_201303.txt  testMain.cc
Weather/: CMakeLists.txt  Makefile  WeatherDialog.cc  WeatherDialog.hh  WeatherStationDialog.cc  WeatherStationDialog.hh  WeatherTableModel.cc  WeatherTableModel.hh  weather_de.ts  weather_nb.ts  weatherdialog.ui
Weather/src/: MultiStationSelection.cc  MultiStationSelection.h  StationSelection.cc  StationSelection.h  cellvalueprovider.cc  cellvalueprovider.h  centralwidget.cc  centralwidget.h  dataconsistencyverifier.cc  dataconsistencyverifier.h  enums.h  fdchecktableitem.cc  fdchecktableitem.h  flagitem.cc  flagitem.h  kvdataprovider.h  main.cc  make.mk  selfexplainable.h  timeobs.cc  timeobs.h  tnchecktableitem.cc  tnchecktableitem.h  weatherdialog.cc  weatherdialog.h  weathertable.cc  weathertable.h  weathertableitem.cc  weathertableitem.h  weathertabletooltip.cc  weathertabletooltip.h
authentication/: Authenticator.cc  Authenticator.h  BusyIndicator.cc  BusyIndicator.h  CMakeLists.txt  FunctionLogger.cc  FunctionLogger.hh  Functors.cc  Functors.hh  HideApplyBox.cc  HideApplyBox.hh  HintWidget.cc  HintWidget.hh  HqcApplication.cc  HqcApplication.hh  HqcDataReinserter.cc  HqcDataReinserter.h  HqcLogging.cc  HqcLogging.hh  KvMetaDataBuffer.cc  KvMetaDataBuffer.hh  KvServiceHelper.cc  KvServiceHelper.hh  MiDateTimeEdit.cc  Sensor.hh  StationIdCompletion.cc  StationIdModel.hh  TimeRange.cc  TimeRange.hh  TimeRangeControl.cc  TimeRangeControl.hh  ToolTipStringListModel.cc  TypeIdModel.cc  authentication.pro  authenticationdialog.cc  authenticationdialog.h  authenticationdialog.ui  debug.cc  debug.hh  hideapplybox.ui  (+9 more)
authentication/test/: CMakeLists.txt  TimeRangeTest.cc
share/: CMakeLists.txt  create_system_db.py  faildetail.txt  failgroup.txt  hqc_current_version.in  kvhqc.desktop.in  log4cpp.properties  metno-WatchRR.desktop.in  metno-WatchRR2.desktop.in  metno-WatchWeather.desktop.in  metno-histWatchRR.desktop.in  metno-histWatchWeather.desktop.in  metno-histhqcdiana.desktop.in  metno-hqcdiana.desktop.in
share/doc/: intro.html  news.html
share/system_db/: aggregated.py  check_explain.py  code_explain.py  counties.py  flag_explain.py  param_limits.py  param_order.py  param_related.py  paramids.txt  stationinfo.py
src/: AnalyseErrors.cc  AnalyseErrors.hh  AutoColumnView.cc  AutoColumnView.hh  AutoDataList.cc  BusyIndicator.cc  CMakeLists.txt  ChecksTableModel.cc  ChecksTableModel.hh  ClockDialog.cc  DataList.cc  DataList.hh  DataListAddColumn.cc  DataListModel.cc  DataListModel.hh  DataView.cc  EditVersionModel.cc  EditVersionModel.hh  ErrorListTableModel.cc  ErrorListTableModel.hh  ExtendedFunctionalityHandler.cc  ExtremesTableModel.cc  ExtremesTableModel.hh  ExtremesView.cc  FindAllParameters.cc  FindExtremeValues.cc  GetData.cc  GetTextData.cc  HqcApplication.cc  HqcApplication.hh  HqcDataReinserter.cc  HqcDianaHelper.cc  JumpToObservation.cc  KvalobsData.cc  KvalobsDataDelegate.cc  KvalobsDataModel.cc  KvalobsDataView.cc  ListDialog.cc  Makefile  ParamIdModel.cc  (+55 more)
src/access/: AccessColumn.cc  AccessColumn.hh  BackgroundAccess.hh  BaseRequest.cc  BaseRequest.hh  CMakeLists.txt  CachingAccess.cc  CachingAccess.hh  CachingAccessPrivate.hh  EditAccess.cc  EditAccess.hh  EditAccessPrivate.hh  EditData.cc  EditData.hh  IndexBuffer.cc  IndexBuffer.hh  KvalobsAccess.cc  KvalobsAccess.hh  KvalobsAccessPrivate.hh  (+23 more)
(+772 files in other folders)
