PROJECT(kvhqc)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(MetnoCMakeSetup)
INCLUDE(MetnoFindPackage)
INCLUDE(MetnoGTest)
INCLUDE(MetnoVersions)

METNO_CMAKE_SETUP()
METNO_PVERSION(4.1.0~a7)

ENABLE_TESTING()

SET(HQC_INSTALL_SHAREDIR "${CMAKE_INSTALL_FULL_DATAROOTDIR}/${PROJECT_NAME}/${PVERSION}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(share)

INSTALL(FILES etc/README DESTINATION "${CMAKE_INSTALL_FULL_SYSCONFDIR}/kvhqc/${PVERSION}")

FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
  CONFIGURE_FILE("Doxyfile.in" "Doxyfile" @ONLY)
  ADD_CUSTOM_TARGET(doc
    ${DOXYGEN_EXECUTABLE} "${CMAKE_BINARY_DIR}/Doxyfile"
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMENT "Generating documentation with Doxygen" VERBATIM
    )
ENDIF()
