INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/.."
  "${CMAKE_SOURCE_DIR}/include"
)

ADD_DEFINITIONS(-DTEST_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")

LINK_DIRECTORIES(${PC_KVCPP_LIBRARY_DIRS} ${PC_METLIBSQT_LIBRARY_DIRS} ${PC_LOG4CPP_LIBRARY_DIRS})

LINK_LIBRARIES(
  authentication
  ${PC_METLIBSQT_LIBRARIES}
  ${GTEST_LIBRARY})

ADD_EXECUTABLE(auth_test
  TimeRangeTest.cc
  gtestMain.cc)

ADD_TEST(NAME auth_test
  COMMAND auth_test --gtest_color=yes)
