
SET(common_SOURCES
  AbstractUpdateListener.cc
  AcceptReject.cc
  CachedParamLimits.cc
  Code2Text.cc
  ColumnFactory.cc
  DataCodeItem.cc
  DataColumn.cc
  DataControlinfoItem.cc
  DataCorrectedItem.cc
  DataItem.cc
  DataListModel.cc
  DataOriginalItem.cc
  DataRR24Item.cc
  DataValueItem.cc
  DataVxItem.cc
  DianaHelper.cc
  FindAllParameters.cc
  FlagChange.cc
  FlagPattern.cc
  FlagPatterns.cc
  FlagUpdate.cc
  Functors.cc
  HqcApplication.cc
  HqcDataReinserter.cc
  HqcUserConfig.cc
  identifyUser.cc
  KvalobsModelAccess.cc
  KvalobsModelData.cc
  KvalobsQueryRunner.cc
  KvalobsUpdate.cc
  KvalobsUpdateListener.cc
  KvHelpers.cc
  KvMetaDataBuffer.cc
  KvModelAccess.cc
  KvServiceHelper.cc
  ModelAccess.cc
  ModelColumn.cc
  NavigateHelper.cc
  ObsColumn.cc
  ObsHelpers.cc
  ObsLogging.cc
  ObsTableModel.cc
  ParamIdModel.cc
  QtKvService.cc
  Sensor.cc
  StationIdCompletion.cc
  StationIdModel.cc
  StationInfoBuffer.cc
  StInfoSysBuffer.cc
  Tasks.cc
  TimeSpan.cc
  TypeIdModel.cc

  QueryTaskHandler.hh
  QueryTaskHandlerPrivate.hh
  QueryTaskHandler.cc
  QueryTaskAccess.hh
  QueryTaskAccess.cc
  BaseRequest.hh
  BaseRequest.cc
  DistributeUpdates.hh
  DistributeUpdates.cc
  EditAccess.hh
  EditAccess.cc
  IndexBuffer.hh
  IndexBuffer.cc
  KvalobsAccess.hh
  KvalobsAccess.cc
  KvalobsData.hh
  KvalobsData.cc
  KvalobsReinserter.hh
  KvalobsReinserter.cc
  ObsAccept.hh
  ObsAccept.cc
  ObsAccess.hh
  ObsAccess.cc
  ObsData.hh
  ObsRequest.hh
  ObsRequest.cc
  ObsFilter.cc
  ObsFilter.hh
  SignalRequest.hh
  SignalRequest.cc
  SimpleBuffer.hh
  SimpleBuffer.cc
  SimpleRequest.hh
  SimpleRequest.cc
  SingleObsBuffer.hh
  SingleObsBuffer.cc
  TimeBuffer.hh
  TimeBuffer.cc
  CachingAccess.hh
  CachingAccessPrivate.hh
  CachingAccess.cc
  sqlutil.hh
  sqlutil.cc
  SyncRequest.hh
  SyncRequestPrivate.hh
  SyncRequest.cc
  WrapRequest.cc
  QueryTask.cc
  DataQueryTask.cc

  AcceptRejectButtons.cc
  Authenticator.cc
  NeighborHeader.cc
  ObsDelegate.cc
  SensorChooser.cc
  SensorHeader.cc
  TimeHeader.cc
  TimeSpanControl.cc
  ToolInterpolate.cc
)

QT4_WRAP_CPP(common_MOC
  AbstractUpdateListener.hh
  DataColumn.hh
  DataListModel.hh
  DianaHelper.hh
  HqcApplication.hh
  KvalobsUpdateListener.hh
  ObsColumn.hh
  ObsTableModel.hh
  QtKvService.hh

  CachingAccessPrivate.hh
  EditAccess.hh
  KvalobsAccess.hh
  QueryTaskAccess.hh
  SignalRequest.hh
  SimpleBuffer.hh
  SyncRequestPrivate.hh
  DataQueryTask.hh

  AcceptRejectButtons.hh
  Authenticator.hh
  ObsDelegate.hh
  SensorChooser.hh
  TimeSpanControl.hh
  ToolInterpolate.hh
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
QT4_WRAP_UI(common_UIH
  authenticationdialog.ui
)

ADD_LIBRARY(common STATIC
  ${common_SOURCES}
  ${common_MOC}
  ${common_UIH}
)

ADD_SUBDIRECTORY(test)
