
SET(common_SOURCES
  AbstractReinserter.cc
  AbstractUpdateListener.cc
  AcceptReject.cc
  AnalyseErrors.cc
  AnalyseFCC.cc
  AnalyseRR24.cc
  CachedParamLimits.cc
  Code2Text.cc
  ColumnFactory.cc
  DataCodeItem.cc
  DataColumn.cc
  DataControlinfoItem.cc
  DataCorrectedItem.cc
  DataItem.cc
  DataListModel.cc
  DataOriginalItem.cc
  DataRR24Item.cc
  DataValueItem.cc
  DataView.cc
  DataVxItem.cc
  DianaHelper.cc
  EditAccess.cc
  EditData.cc
  EditDataEditor.cc
  EditTimeColumn.cc
  FindAllParameters.cc
  FindExtremeValues.cc
  FindMissingValues.cc
  FlagChange.cc
  FlagPattern.cc
  FlagPatterns.cc
  FlagUpdate.cc
  Functors.cc
  HqcApplication.cc
  HqcCorbaReinserter.cc
  HqcKafkaReinserter.cc
  HqcUserConfig.cc
  identifyUser.cc
  KvalobsAccess.cc
  KvalobsData.cc
  KvalobsModelAccess.cc
  KvalobsModelData.cc
  KvalobsUpdateListener.cc
  KvBufferedAccess.cc
  KvHelpers.cc
  KvMetaDataBuffer.cc
  KvModelAccess.cc
  KvServiceHelper.cc
  ModelAccess.cc
  ModelColumn.cc
  NavigateHelper.cc
  ObsAccess.cc
  ObsColumn.cc
  ObsHelpers.cc
  ObsLogging.cc
  ObsTableModel.cc
  ParamIdModel.cc
  QtKvalobsAccess.cc
  QtKvService.cc
  Sensor.cc
  StationIdCompletion.cc
  StationIdModel.cc
  StationInfoBuffer.cc
  StInfoSysBuffer.cc
  Tasks.cc
  TimeRange.cc
  TypeIdModel.cc
)

QT4_WRAP_CPP(common_MOC
  AbstractUpdateListener.hh
  DataListModel.hh
  DianaHelper.hh
  HqcApplication.hh
  KvalobsUpdateListener.hh
  ObsTableModel.hh
  QtKvalobsAccess.hh
  QtKvService.hh
)

ADD_LIBRARY(common STATIC
  ${common_SOURCES}
  ${common_MOC}
)

ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(test)
