
SET(common_SOURCES
  AbstractUpdateListener.cc
  AcceptRejectButtons.cc
  AcceptReject.cc
  Authenticator.cc
  BaseRequest.cc
  BaseRequest.hh
  CachedParamLimits.cc
  CachingAccess.cc
  CachingAccess.hh
  CachingAccessPrivate.hh
  Code2Text.cc
  ColumnFactory.cc
  DataCodeItem.cc
  DataColumn.cc
  DataControlinfoItem.cc
  DataCorrectedItem.cc
  DataHistoryQueryTask.cc
  DataItem.cc
  DataListModel.cc
  DataOriginalItem.cc
  DataQueryTask.cc
  DataRR24Item.cc
  DataValueItem.cc
  DataVxItem.cc
  DeleteTaskWhenDone.cc
  DianaClient.cc
  DianaHelper.cc
  DistributeUpdates.cc
  DistributeUpdates.hh
  EditAccess.cc
  EditAccess.hh
  FindAllParameters.cc
  FlagChange.cc
  FlagPattern.cc
  FlagPatterns.cc
  FlagUpdate.cc
  Functors.cc
  HqcApplication.cc
  HqcDianaClient.cc
  HqcSystemDB.cc
  HqcUserConfig.cc
  identifyUser.cc
  IndexBuffer.cc
  IndexBuffer.hh
  KvalobsAccess.cc
  KvalobsAccess.hh
  KvalobsData.cc
  KvalobsData.hh
  KvalobsModelAccess.cc
  KvalobsQueryRunner.cc
  KvalobsReinserter.cc
  KvalobsUpdate.cc
  KvalobsUpdateListener.cc
  KvHelpers.cc
  KvMetaDataBuffer.cc
  KvServiceHelper.cc
  KvTypedefs.hh
  ModelAccess.cc
  ModelBuffer.cc
  ModelColumn.cc
  ModelData.cc
  ModelQueryTask.cc
  ModelRequest.cc
  NavigateHelper.cc
  NeighborHeader.cc
  ObsAccept.cc
  ObsAccept.hh
  ObsAccess.cc
  ObsAccess.hh
  ObsColumn.cc
  ObsData.hh
  ObsDelegate.cc
  ObsFilter.cc
  ObsFilter.hh
  ObsHelpers.cc
  ObsLogging.cc
  ObsRequest.cc
  ObsRequest.hh
  ObsPgmQueryTask.cc
  ObsPgmRequest.cc
  ObsTableModel.cc
  ParamIdModel.cc
  ParamQueryTask.cc
  QtKvService.cc
  QueryTaskAccess.cc
  QueryTaskAccess.hh
  QueryTask.cc
  QueryTaskHandler.cc
  QueryTaskHandler.hh
  QueryTaskHandlerPrivate.hh
  QueryTaskHelper.cc
  QueryTaskHelper.hh
  Sensor.cc
  SensorChooser.cc
  SensorHash.hh
  SensorHeader.cc
  SignalRequest.cc
  SignalRequest.hh
  SimpleBuffer.cc
  SimpleBuffer.hh
  SimpleRequest.cc
  SimpleRequest.hh
  SingleObsBuffer.cc
  SingleObsBuffer.hh
  SortedBuffer.cc
  sqlutil.cc
  sqlutil.hh
  StationIdCompletion.cc
  StationIdModel.cc
  StationInfoBuffer.cc
  StationParamSQLTask.cc
  StationQueryTask.cc
  StInfoSysBuffer.cc
  SyncRequest.cc
  SyncRequest.hh
  SyncTask.cc
  SyncTask.hh
  Tasks.cc
  TimeBuffer.cc
  TimeBuffer.hh
  TimeHeader.cc
  TimeSpan.cc
  TimeSpanControl.cc
  ToolInterpolate.cc
  TypeIdModel.cc
  TypesQueryTask.cc
  WrapRequest.cc
)

QT5_WRAP_CPP(common_MOC
  AbstractUpdateListener.hh
  AcceptRejectButtons.hh
  Authenticator.hh
  CachingAccessPrivate.hh
  DataColumn.hh
  DataHistoryQueryTask.hh
  DataListModel.hh
  DataQueryTask.hh
  DeleteTaskWhenDone.hh
  DianaClient.hh
  DianaHelper.hh
  EditAccess.hh
  HqcApplication.hh
  HqcDianaClient.hh
  KvalobsAccess.hh
  KvalobsModelAccess.hh
  KvalobsUpdateListener.hh
  KvMetaDataBuffer.hh
  KvServiceHelper.hh
  ModelBuffer.hh
  ModelQueryTask.hh
  ModelRequest.hh
  ObsColumn.hh
  ObsDelegate.hh
  ObsPgmQueryTask.hh
  ObsPgmRequest.hh
  ObsRequest.hh
  ObsTableModel.hh
  QtKvService.hh
  QueryTask.hh
  QueryTaskAccess.hh
  QueryTaskHelper.hh
  SensorChooser.hh
  SignalRequest.hh
  SimpleBuffer.hh
  TimeSpanControl.hh
  ToolInterpolate.hh
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
SET(common_UIS
  authenticationdialog.ui
)
QT5_WRAP_UI(common_UIH ${common_UIS})
QT5_CREATE_TRANSLATION(common_QM
  ${common_SOURCES}
  ${common_UIS}

  common_nb.ts
  common_de.ts
)
INSTALL(FILES ${common_QM} DESTINATION "${HQC_INSTALL_SHAREDIR}/lang")

ADD_LIBRARY(common STATIC
  ${common_SOURCES}
  ${common_MOC}
  ${common_UIH}
  ${common_QM}
)

ADD_SUBDIRECTORY(test)
